@@ -2,32 +2,31 @@ package dev.findfirst.imagesearch.service;
 
 import static dev.findfirst.imagesearch.service.queries.ImageQueries.ACADEMIC_IMAGES;
 import static dev.findfirst.imagesearch.service.queries.ImageQueries.classificationQuery;
+import static dev.findfirst.imagesearch.service.queries.ImageQueries.knnQuery;
 import static dev.findfirst.imagesearch.service.queries.ImageQueries.sortByConfidence;
 
 import co.elastic.clients.elasticsearch.ElasticsearchClient;
 import co.elastic.clients.elasticsearch._types.ElasticsearchException;
+import co.elastic.clients.elasticsearch._types.query_dsl.Query;
 import co.elastic.clients.elasticsearch.core.SearchResponse;
+import co.elastic.clients.elasticsearch.core.search.Hit;
 import dev.findfirst.imagesearch.model.AcademicImage;
 import dev.findfirst.imagesearch.repository.AcademicImageRepository;
 import dev.findfirst.imagesearch.utility.MetaData;
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.elasticsearch.core.ElasticsearchOperations;
-import org.springframework.data.elasticsearch.core.SearchHits;
-import org.springframework.data.elasticsearch.core.query.StringQuery;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class ImageSearchService {
 
   private final AcademicImageRepository imageRepo;
-  private final ElasticsearchOperations elasticsearchOperations;
   private final ElasticsearchClient esClient;
   private final TorchService torch;
 
@@ -35,11 +34,15 @@ public class ImageSearchService {
     return imageRepo.findById(id);
   }
 
+  /**
+   * Text Query for image.
+   *
+   * @param text the users query for an image.
+   * @param k the number of hits to return.
+   * @return List of top hits.
+   */
   public List<AcademicImage> findByQuery(String text, int k) {
-    return query(torch.getEmbeddings(text)).stream()
-        .limit(k)
-        .map(sh -> sh.getContent())
-        .collect(Collectors.toList());
+    return queryByImageVect(torch.getEmbeddings(text)).stream().map(h -> h.source()).toList();
   }
 
   /**
@@ -63,13 +66,8 @@ public class ImageSearchService {
     .sort(sortByConfidence(imageClass[0])),AcademicImage.class);
     // spotless:on
 
-    var aiHits = response.hits().hits();
-    return aiHits.stream().limit(k).map(aih -> aih.source()).toList();
+    return response.hits().hits().stream().limit(k).map(aih -> aih.source()).toList();
   }
-
-  // Return the top results for a given query with query
-
-  // multiple categories
 
   /**
    * Finds a similar image. First calls Pytorch to get the vector then passes that to the query.
@@ -81,39 +79,41 @@ public class ImageSearchService {
    * @see https://spring.io/guides/gs/uploading-files/ for how to upload files. Used to produce
    *     function.
    */
-  public List<AcademicImage> findSimilarImages(MultipartFile file, int k) throws Exception {
+  public List<AcademicImage> findSimilarImages(MultipartFile file, int k, String... imageClasses)
+      throws Exception {
     String type = file.getContentType();
     if (file.isEmpty() || !isImage(type)) {
       throw new Exception("Empty file or Wrong type.");
     }
-
-    return query(torch.getEmbeddings(file)).stream() // search results
+    return queryByImageVect(torch.getEmbeddings(file), imageClasses).stream() // search results
         .limit(k)
-        .map(searchHits -> searchHits.getContent())
-        .collect(Collectors.toList());
+        .map(hit -> hit.source())
+        .toList();
   }
 
-  private SearchHits<AcademicImage> query(double[] embedding) {
-    var query =
-        new StringQuery(
-            """
-            {
-              "script_score": {
-                "query": {
-                  "match_all": {}
-              },
-              "script": {
-                "source": "cosineSimilarity(params.queryVector, 'embedding')+1.0",
-                "params": { "queryVector": %s }
-                }
-              }
-            }
-            """
-                .formatted(Arrays.toString(embedding)));
-
-    return elasticsearchOperations.search(query, AcademicImage.class);
+  /**
+   * Finds the images via K-NN search and provides images classifications.
+   *
+   * @param embedding the image embedding vector to search against.
+   * @param imageClasses classes if any selected.
+   * @return List of hits.
+   */
+  private List<Hit<AcademicImage>> queryByImageVect(double[] embedding, String... imageClasses) {
+    try {
+      Query q = knnQuery(embedding, imageClasses);
+      return esClient.search(s -> s.query(q), AcademicImage.class).hits().hits();
+    } catch (ElasticsearchException | IOException e) {
+      log.error("Error searching for image by embedding {}", e);
+    }
+    return null;
   }
 
+  /**
+   * Utility to check if its an image.
+   *
+   * @param type file type.
+   * @return true or false if the type is an image.
+   */
   private boolean isImage(String type) {
     var imageTypes = type.split("/")[1];
     return imageTypes.equalsIgnoreCase("png")
@@ -121,6 +121,13 @@ public class ImageSearchService {
         || imageTypes.equalsIgnoreCase("jpg");
   }
 
+  /**
+   * Update for metadata of a document.
+   *
+   * @param metaData metadata (caption, text, titles, etc)
+   * @throws ElasticsearchException If elastic search is not availabe.
+   * @throws IOException IO errors.
+   */
   public void updateImage(MetaData metaData) throws ElasticsearchException, IOException {
     var ai =
         esClient
